--- a/src/staticPage.html
+++ b/src/staticPage.html
@@ -78,5 +78,46 @@
     <th>三行三列</th>
 </tr>
 </table>
+<br/>
+<br/>
+<!--跨行跨列表格-->
+<h3>这是一个跨行跨列表格</h3>
+<table cellspacing="0" border="1" width="500" height="400">
+    <tr>
+        <td colspan="2">1.1</td>
+<!--   第一行第一列的单元格跨了两列，所有删除第一行第二列     <td>1.2</td>-->
+        <td>1.3</td>
+        <td>1.4</td>
+        <td>1.5</td>
+    </tr>
+    <tr>
+        <td rowspan="2">2.1</td>
+        <td>2.2</td>
+        <td>2.3</td>
+        <td>2.4</td>
+        <td>2.5</td>
+    </tr>
+    <tr>
+<!--     同样的，这里也需要删除   <td>3.1</td>-->
+        <td>3.2</td>
+        <td>3.3</td>
+        <td>3.4</td>
+        <td>3.5</td>
+    </tr>
+    <tr>
+        <td>4.1</td>
+        <td>4.2</td>
+        <td>4.3</td>
+        <td colspan="2" rowspan="2">4.4</td>
+<!--        <td>4.5</td>-->
+    </tr>
+    <tr>
+        <td>5.1</td>
+        <td>5.2</td>
+        <td>5.3</td>
+<!--        <td>5.4</td>-->
+<!--        <td>5.5</td>-->
+    </tr>
+</table>
 </body>
 </html>
